feat/Added pt-br lang in about page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<!-- Favicon-->
 	<link rel="shortcut icon" href="img/fav.ico">
 	<!-- Author Meta -->
-	<meta name="author" content="Harrison Jansma">
+	<meta name="author" content="Renan Cavalcante">
 	<!-- Meta Description -->
-	<meta name="description" content="A personal website built and deployed by Harrison Jansma.">
+	<meta name="description" content="A personal website built and deployed by Renan Cavalcante.">
 	<!-- Meta Keyword -->
 	<meta name="keywords" content="portfolio">
 	<!-- meta character set -->
