feat/added porfolio page

--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
 					<ul class="nav-menu">
 						<li><a href="/">Home</a></li>
 						<li><a data-translate="about_me" href="about">About</a></li>
+						<li><a data-translate="portfolio" href="archive">Portfolio</a></li>
 						<li data-translate="resume"></li>
 						<li>
 							<div class="row align-items-center">
@@ -68,8 +69,8 @@
 					<h1 data-translate="about_me" class="text-white">
 						About Me
 					</h1>
-					<p class="text-white link-nav"><a href="/">Home </a> <span class="lnr lnr-arrow-right"></span> <a data-translate="about_me"
-							href="about"> About Me</a></p>
+					<p class="text-white link-nav"><a href="/">Home </a> <span class="lnr lnr-arrow-right"></span> <a
+							data-translate="about_me" href="about"> About Me</a></p>
 				</div>
 			</div>
 		</div>
@@ -86,7 +87,7 @@
 				</div>
 				<div class="col-lg-5 col-md-6 home-about-right">
 					<h1 data-translate="personal_details_title" class="text-uppercase">Personal Details</h1>
-					<p data-translate="personal_details_content" >
+					<p data-translate="personal_details_content">
 						Here's some more info obout me.
 					</p>
 					<a href="#FAQ" data-translate="about_me" class="primary-btn text-uppercase">About Me</a>
@@ -131,7 +132,8 @@
 						<h4>
 							<time data-translate="first_exp_title">License in Physics</time>
 						</h4>
-						<p><b data-translate="first_exp_content">Federal Institute of Education, Science and Tecnology - 2023</b></p>
+						<p><b data-translate="first_exp_content">Federal Institute of Education, Science and Tecnology -
+								2023</b></p>
 					</div>
 				</li>
 				<li>
@@ -140,7 +142,8 @@
 						<h4>
 							<time data-translate="second_exp_title">Data Scientist Researcher Volunteer</time>
 						</h4>
-						<p><b data-translate="second_exp_first_content">Astrophysics and Cosmology Laboratory - IFET</b></p>
+						<p><b data-translate="second_exp_first_content">Astrophysics and Cosmology Laboratory - IFET</b>
+						</p>
 						<p data-translate="second_exp_second_content">August 2019 - June 2022</p>
 					</div>
 				</li>
@@ -181,34 +184,43 @@
 					<div class="col-lg-8">
 						<dl class="accordion">
 							<dt>
-								<a href="" data-translate="first_question_title">How long have you been practicing Python?</a>
+								<a href="" data-translate="first_question_title">How long have you been practicing
+									Python?</a>
 							</dt>
 							<dd style="display: none;">
-								<p data-translate="first_question_first_content">I discovered Python in mid-2017, used it for games, however, 2019 is when I really
+								<p data-translate="first_question_first_content">I discovered Python in mid-2017, used
+									it for games, however, 2019 is when I really
 									started to get into it and look at it with different eyes</p>
 
-								<p data-translate="first_question_second_content">I have experience in building Visualization with Plotly or ApexCharts, treating data
+								<p data-translate="first_question_second_content">I have experience in building
+									Visualization with Plotly or ApexCharts, treating data
 									with Pandas, creating Python Packages and deploying them to PyPi</p>
 							</dd>
 
 							<dt>
-								<a href="" data-translate="second_question_title" >Do you have any experience working with databases?</a>
+								<a href="" data-translate="second_question_title">Do you have any experience working
+									with databases?</a>
 							</dt>
 							<dd style="display: none;">
-								<p data-translate="second_question_first_content">At the start of my research, I had to learn how to use SQL to query the database and
+								<p data-translate="second_question_first_content">At the start of my research, I had to
+									learn how to use SQL to query the database and
 									extract the data I needed. I also had to learn how to use MongoDB to store the data
 									I was collecting.</p>
-								<p data-translate="second_question_second_content">In my present job, I use especially BigQuery and MySQL to query the data to create
+								<p data-translate="second_question_second_content">In my present job, I use especially
+									BigQuery and MySQL to query the data to create
 									the dashboards and reports.</p>
 
 								</p>
 							</dd>
 							<dt>
-								<a href="" data-translate="third_question_title">What frameworks do you know and like?</a>
+								<a href="" data-translate="third_question_title">What frameworks do you know and
+									like?</a>
 							</dt>
 							<dd style="display: none;">
-								<p data-translate="third_question_first_content">There are some frameworks that i like to use, such as:</p>
-								<p data-translate="third_question_second_content">Flask, Django and BotCity in Python</p>
+								<p data-translate="third_question_first_content">There are some frameworks that i like
+									to use, such as:</p>
+								<p data-translate="third_question_second_content">Flask, Django and BotCity in Python
+								</p>
 								<p data-translate="third_question_third_content">NodeJS in JavaScript</p>
 							</dd>
 						</dl>
@@ -308,97 +320,101 @@
 				'en': "Here's some more info obout me.",
 				'pt-br': 'Aqui está mais algumas informações sobre mim.'
 			},
-			'personal_details_first_p':{
+			'personal_details_first_p': {
 				'en': "I started in the programming world in 2016 because of a game called Runescape, I wanted to learn how to make my own server and play with friends. My steps in this world of programming were self taught, because I just saw it as fun, and it was like that until 2019 when I had the opportunity to participate in a research in the area of stellar astrophysics using Python in college. <br> <br> That was the moment I fell in love with data science",
-				'pt-br':'Comecei no mundo da programação em 2016 por causa de um jogo chamado Runescape, eu queria aprender a fazer meu próprio servidor e jogar com amigos. Meus passos nesse mundo da programação foram autodidatas, porque eu só via como diversão, e foi assim até 2019 quando tive a oportunidade de participar de uma pesquisa na área de astrofísica estelar usando Python na faculdade. <br> <br> Foi nesse momento que me apaixonei pela ciência de dados'
+				'pt-br': 'Comecei no mundo da programação em 2016 por causa de um jogo chamado Runescape, eu queria aprender a fazer meu próprio servidor e jogar com amigos. Meus passos nesse mundo da programação foram autodidatas, porque eu só via como diversão, e foi assim até 2019 quando tive a oportunidade de participar de uma pesquisa na área de astrofísica estelar usando Python na faculdade. <br> <br> Foi nesse momento que me apaixonei pela ciência de dados'
 			},
-			'my_experience_title':{
+			'my_experience_title': {
 				'en': 'My Experience',
 				'pt-br': 'Minha Experiência'
 			},
-			'first_exp_title':{
+			'first_exp_title': {
 				'en': 'License in Physics',
 				'pt-br': 'Licenciatura em Física'
 			},
-			'first_exp_content':{
+			'first_exp_content': {
 				'en': 'Federal Institute of Education, Science and Tecnology - 2023',
 				'pt-br': 'Instituto Federal de Educação, Ciência e Tecnologia - 2023'
 			},
-			'second_exp_title':{
+			'second_exp_title': {
 				'en': 'Data Scientist Researcher Volunteer',
 				'pt-br': 'Cientista de Dados Voluntário'
 			},
-			'second_exp_first_content':{
+			'second_exp_first_content': {
 				'en': 'Astrophysics and Cosmology Laboratory - IFET',
 				'pt-br': 'Laboratório de Astrofísica e Cosmologia - IFCE'
 			},
-			'second_exp_second_content':{
+			'second_exp_second_content': {
 				'en': 'August 2019 - June 2022',
 				'pt-br': 'Agosto 2019 - Junho 2022'
 			},
-			'third_exp_title':{
+			'third_exp_title': {
 				'en': 'Bussiness Inteligence Developer Intern',
 				'pt-br': 'Estágio em Desenvolvimento de Business Inteligence'
 			},
-			'third_exp_first_content':{
+			'third_exp_first_content': {
 				'en': 'June 2022 - October 2022',
 				'pt-br': 'Junho 2022 - Outubro 2022'
 			},
-			'fourth_exp_title':{
+			'fourth_exp_title': {
 				'en': 'Bussiness Inteligence Developer Jr',
 				'pt-br': 'Desenvolvedor de Business Inteligence Jr'
 			},
-			'fourth_exp_first_content':{
+			'fourth_exp_first_content': {
 				'en': 'November 2022 - Present',
 				'pt-br': 'Novembro 2022 - Presente'
 			},
-			'any_questions':{
+			'any_questions': {
 				'en': 'Any Questions?',
 				'pt-br': 'Alguma Dúvida?'
 			},
-			'first_question_title':{
+			'first_question_title': {
 				'en': 'How long have you been practicing Python?',
 				'pt-br': 'Há quanto tempo você pratica Python?'
 			},
-			'first_question_first_content':{
+			'first_question_first_content': {
 				'en': 'I discovered Python in mid-2017, used it for games, however, 2019 is when I really started to get into it and look at it with different eyes',
 				'pt-br': 'Eu descobri o Python em meados de 2017, usei para jogos, no entanto, 2019 é quando realmente comecei a me aprofundar e olhar com outros olhos'
 			},
-			'first_question_second_content':{
+			'first_question_second_content': {
 				'en': 'I have experience in building Visualization with Plotly or ApexCharts, treating data with Pandas, creating Python Packages and deploying them to PyPi',
 				'pt-br': 'Tenho experiência na construção de Visualização com Plotly ou ApexCharts, tratamento de dados com Pandas, criação de Pacotes Python e implantação no PyPi'
 			},
-			'second_question_title':{
+			'second_question_title': {
 				'en': 'Do you have any experience working with databases?',
 				'pt-br': 'Você tem alguma experiência trabalhando com bancos de dados?'
 			},
-			'second_question_first_content':{
+			'second_question_first_content': {
 				'en': 'At the start of my research, I had to learn how to use SQL to query the database and extract the data I needed. I also had to learn how to use MongoDB to store the data I was collecting.',
 				'pt-br': 'No início da minha pesquisa, tive que aprender a usar SQL para consultar o banco de dados e extrair os dados que eu precisava. Eu também tive que aprender a usar o MongoDB para armazenar os dados que eu estava coletando.'
 			},
-			'second_question_second_content':{
+			'second_question_second_content': {
 				'en': 'In my present job, I use especially BigQuery and MySQL to query the data to create the dashboards and reports.',
 				'pt-br': 'No meu trabalho atual, eu uso principalmente o BigQuery e o MySQL para consultar os dados para criar os painéis e relatórios.'
 			},
-			'third_question_title':{
+			'third_question_title': {
 				'en': 'What frameworks do you know and like?',
 				'pt-br': 'Quais frameworks você conhece e gosta?'
 			},
-			'third_question_first_content':{
+			'third_question_first_content': {
 				'en': 'There are some frameworks that i like to use, such as:',
 				'pt-br': 'Existem alguns frameworks que gosto de usar, como:'
 			},
-			'third_question_second_content':{
+			'third_question_second_content': {
 				'en': 'Flask, Django and BotCity in Python',
 				'pt-br': 'Flask, Django e BotCity em Python'
 			},
-			'third_question_third_content':{
+			'third_question_third_content': {
 				'en': 'NodeJS in JavaScript',
 				'pt-br': 'NodeJS em JavaScript'
 			},
 			'about_me': {
 				'en': 'About Me',
 				'pt-br': 'Sobre Mim'
+			},
+			'portfolio': {
+				'en': 'Portfolio',
+				'pt-br': 'Portfólio'
 			},
 			'about_this_page': {
 				'en': 'About This Page',
