--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					<ul class="nav-menu">
 						<li><a href="/">Home</a></li>
 						<li><a data-translate="about_me" href="about">About</a></li>
+						<li><a data-translate="portfolio" href="archive">Portfolio</a></li>
 						<li data-translate="resume"></li>
 						<li>
 							<div class="row align-items-center">
@@ -441,6 +442,10 @@
 			'resume': {
 				'en': '<a href="CV_Renan_EN.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a>',
 				'pt-br': '<a  href="CV_Renan_BR.pdf" class="genric-btn primary-border circle" target="_blank">Curriculo</a>'
+			},
+			'portfolio': {
+				'en': 'Portfolio',
+				'pt-br': 'Portfólio'
 			},
 			'i_am': {
 				'en': 'I am',
