fix/margin lang switch in mobile

--- a/about.html
+++ b/about.html
@@ -48,9 +48,8 @@
 						<li><a data-translate="portfolio" href="archive">Portfolio</a></li>
 						<li data-translate="resume"></li>
 						<li>
-							<a href="#">
-								<p id="writeHere" class="writeHereMobile" onclick="change_lang()"></p>
-							</a>
+							<p id="writeHere" class="writeHereMobile" onclick="change_lang()" style='cursor: pointer;'>
+							</p>
 						</li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
